<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".atividade.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linLayoutImgVia">
        <ImageView
            android:id="@+id/imgViaExpressa"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_gray"
            android:contentDescription="@string/logo_via_expressa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:id="@+id/linTxtLogado">
        <TextView
            android:id="@+id/txtMainLogadoComo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Logado como: "
            android:textStyle="bold|italic"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/linTxtLogado"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btnMainNovousuario"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:drawableBottom="@drawable/ic_person_add_black_24dp"
            android:background="@drawable/back_botao"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnMainDeslogar"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:drawableBottom="@drawable/ic_exit_to_app_black_24dp"
            android:background="@drawable/back_botao"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/linLayoutImgVia"
        android:gravity="center_vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idscrollview">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/editLayoutCNPJ">

                    <com.santalu.maskedittext.MaskEditText
                        android:id="@+id/editCNPJ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/aqui_vai_o_cnpj"
                        android:maxLength="14"
                        android:enabled="false"
                        android:padding="15dp"
                        app:met_mask="##.###.###/####-##" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLayoutNF"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/editLayoutCNPJ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/aqui_vai_o_n_da_nf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editNF"
                        android:layout_below="@id/editLayoutCNPJ"
                        android:layout_marginTop="40dp"
                        android:maxLength="9"
                        android:inputType="number"
                        android:enabled="false"
                        android:padding="15dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/editLayoutNF"
                    android:id="@+id/editLayoutCodigoCompleto">

                    <com.santalu.maskedittext.MaskEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editCodigoCompleto"
                        android:layout_below="@id/editLayoutNF"
                        android:layout_marginTop="40dp"
                        android:hint="@string/aqui_vai_o_c_digo_de_barras_completo"
                        android:maxLength="44"
                        android:inputType="number"
                        android:padding="15dp"
                        app:met_mask="#### #### #### #### #### #### #### #### #### #### ####"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clique_na_imagem_para_escanear_um_c_digo"
                    android:layout_below="@id/editLayoutCodigoCompleto"
                    android:layout_marginTop="25dp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/imgScan"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_below="@id/editLayoutCodigoCompleto"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/barcode"
                    android:contentDescription="@string/logo_barcode"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/imgScan"
                    android:gravity="center">
                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_enviar"
                        android:id="@+id/btnEnviarDados"
                        android:background="@drawable/back_botao"
                        android:textColor="@android:color/white"
                        app:spinning_bar_color="@android:color/white"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>