<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewUserActivity"
    android:background="#fcfcfc">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapToolbarNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimary"
            app:title="Novo usuario"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleMarginEnd="10dp"
            android:background="@drawable/newuser_toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarNovoUsuario"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            android:background="#fcfcfc">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Digite os dados do usuario"
                android:gravity="center"
                android:padding="30dp"
                android:textStyle="bold"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNovoUsuarioApelido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apelido"
                    android:padding="20dp"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUsuarioNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="NOME COMPLETO"
                    android:padding="20dp"
                    android:inputType="textCapSentences"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUsuarioEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="EMAIL"
                    android:padding="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/editNovoUsuarioTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="TELEFONE"
                    android:padding="20dp"
                    android:maxLength="15"
                    android:inputType="number"
                    app:met_mask="(##) #####-####"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUsuarioSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="SENHA"
                    android:padding="20dp"
                    android:inputType="textCapSentences|textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUsuarioConfirmacaoSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="CONFIRME A SENHA"
                    android:padding="20dp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivel_do_usuario"
                    android:textSize="16sp"
                    android:padding="10dp"/>
                <Spinner
                    android:id="@+id/spnNovoUsuarioNivel"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_de_usuario"
                    android:textSize="16sp"
                    android:padding="10dp"/>
                <Spinner
                    android:id="@+id/spnNovoUsuarioTipo"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:text="CADASTRAR"
                    android:id="@+id/btnNovoUsuarioCadastrar"
                    android:background="@drawable/shape_default"
                    android:textColor="@android:color/white"
                    app:spinning_bar_color="@android:color/white"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>